--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,17 @@
 ---
-title: "About"
+title: "소개"
 image: profile.jpg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
+    - icon: facebook
+      text: Facebook
+      href: https://www.facebook.com/profile.php?id=100007849175784
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/samuel4388
 
 ---
 
-About this blog
+저는 다양한 언어와 수학을 좋아하는 **사무엘**(본명: 김상윤(金尙潤))입니다.
+이 블로그는 외국어 공부, 언어학, 수학, 프로그래밍 등 제가 공부한 내용을 정리하고 공유하는 공간입니다.
