--- a/index.qmd
+++ b/index.qmd
@@ -3,12 +3,11 @@ title: "myblog"
 listing:
   contents: posts
   sort: "date desc"
-  type: default
+  type: table
+  fields: [title, date, categories]
   categories: true
   sort-ui: false
   filter-ui: false
 page-layout: full
 title-block-banner: true
 ---
-
-
