--- a/ko.qmd
+++ b/ko.qmd
@@ -1,10 +1,10 @@
 ---
-title: "한국어 블로그"
+title: "사무엘의 수리 언어 블로그"
 listing:
   contents: posts/ko
-  type: table
-  fields: [title, date, categories]
+  type: default
+  categories: true
 page-layout: full
 lang: ko
 ---
-사무엘의 한국어 블로그에 오신 걸 환영합니다 🇰🇷
+사무엘의 수리 언어 블로그에 오신 걸 환영합니다!
