--- a/posts/ko/2025-03-26-green-theorem/index.qmd
+++ b/posts/ko/2025-03-26-green-theorem/index.qmd
@@ -10,7 +10,7 @@ date: 2025-03-26
 다음과 같이 표현된다:
 
 $$
-\oint_C (P \, dx + Q \, dy) = \iint_D \left( \frac{\\partial Q}{\\partial x} - \frac{\\partial P}{\\partial y} \\right) dx \, dy
+\oint_C (P \, dx + Q \, dy) = \iint_D \left( \frac{\partial Q}{\partial x} - \frac{\partial P}{\partial y} \right) dx \, dy
 $$
 
 이 정리는 선형 대수, 전자기학, 유체역학 등 다양한 분야에서 활용된다.
