더미 글 삭제

--- a/index.qmd
+++ b/index.qmd
@@ -1,17 +1,16 @@
 ---
-title: "Welcome"
+title: "인사말"
 page-layout: full
 format: html
 ---
 
-# 안녕하세요! 👋  
-저는 다양한 언어와 수학을 좋아하는 **사무엘**(본명: 김상윤)입니다.  
-이 블로그는 외국어, 수학, 언어학, 프로그래밍 등  
-제가 공부한 내용을 정리하고 공유하는 공간입니다.
+저는 다양한 언어와 수학을 좋아하는 **사무엘**(본명: 김상윤(金尙潤))입니다.
+
+이 블로그는 외국어, 수학, 언어학, 프로그래밍 등 제가 공부한 내용을 정리하고 공유하는 공간입니다.
 
 ---
 
 ## 🌐 언어 선택
 
-- [🇰🇷 한국어 블로그로 가기](ko.html)
-- [🇬🇧 Go to English Blog](en.html)
+- [🇰🇷 한국어 블로그](ko.html)
+- [🇬🇧 English Blog](en.html)
