카테고리 수정

--- a/posts/ko/2025-03-26-green-theorem/index.qmd
+++ b/posts/ko/2025-03-26-green-theorem/index.qmd
@@ -2,7 +2,7 @@
 title: "그린 정리란 무엇일까"
 lang: ko
 translation-key: 2025-03-26-green-theorem
-categories: [math, calculus]
+categories: [mathematics, calculus]
 date: 2025-03-26
 ---
 
