파일명 바꿈

--- a/posts/en/2025-03-26-green-theorem/index.qmd
+++ b/posts/en/2025-03-26-green-theorem/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Green's Theorem"
 lang: en
-translation-key: 2025-03-26-green-theorem
+translation-key: 250326_그린_정리란_무엇일까
 categories: [math, calculus]
 date: 2025-03-26
 ---
