--- a/posts/ko/250326_그린_정리란_무엇일까/index.qmd
+++ b/posts/ko/250326_그린_정리란_무엇일까/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "그린 정리란 무엇일까"
 lang: ko
-translation-key: 250326_그린_정리란_무엇일까
+translation-key: 250326_1
 categories: [mathematics, calculus]
 date: 2025-03-26
 ---
