--- a/posts/ko/250330_Crossy_Road와_확률/index.qmd
+++ b/posts/ko/250330_Crossy_Road와_확률/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Crossy Road와 확률"
 lang: ko
-translation-key: 250330_Crossy_Road와_확률
+translation-key: 250330_2
 categories: [life, mathematics, probability]
 date: 2025-03-30
 image: img_1522.png
