--- a/posts/ko/250513_순서_통계량_문제를_다중_적분으로_접근해_보았다/index.qmd
+++ b/posts/ko/250513_순서_통계량_문제를_다중_적분으로_접근해_보았다/index.qmd
@@ -2,7 +2,7 @@
 title: "순서 통계량 문제를 다중 적분으로 접근해 보았다"
 lang: ko
 translation-key: 250513_1
-categories: [probability]
+categories: [mathematics, probability]
 date: 2025-05-13
 ---
 
