Update index page and blog layout

--- a/index.qmd
+++ b/index.qmd
@@ -1,16 +1,15 @@
 ---
 title: "사무엘의 수리 언어 블로그"
+listing:
+  contents: posts
+  sort: "date desc"
+  type: grid
+  categories: true
 page-layout: full
+title-block-banner: true
 format: html
 ---
 
 저는 다양한 언어와 수학을 좋아하는 **사무엘**(본명: 김상윤(金尙潤))입니다.
 
 이 블로그는 외국어, 수학, 언어학, 프로그래밍 등 제가 공부한 내용을 정리하고 공유하는 공간입니다.
-
----
-
-## 📚 최근 글
-
-::: {.quarto-posts listing="posts/*"}
-:::
